Add html to container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,4 @@ services:
     volumes:
       - './config/nginx:/etc/nginx/conf.d'
       - './certs/:/certs/'
+      - './website/:/etc/nginx/html'
